# carbon

./: .env  Cargo.toml  stock.db
archives/: Cargo.toml  main.rs
migrations/: 20260323154611_create_bookmarks.sql
src/: config.rs  main.rs
