[package]
name = "carbon"
version = "0.1.0"
edition = "2024"


# [package]
# name = "stock_api"
# version = "0.1.0"
# edition = "2021"

[dependencies]
axum = "0.7"                     # Le framework web
tokio = { version = "1", features = ["full"] }   # Runtime asynchrone
tower = "0.4"                    # Pour les middlewares et services
tower-http = { version = "0.5", features = ["trace", "cors"] }  # Utilitaires HTTP
serde = { version = "1", features = ["derive"] } # Sérialisation/désérialisation
anyhow = "1"                     # Gestion simplifiée des erreurs
dotenvy = "0.15"                 # Variables d’environnement depuis .env
